--- a/css/style.css
+++ b/css/style.css
@@ -1,211 +1,212 @@
 @font-face {
-    font-family: 'Gotham';
-    src: url('../assets/fonts/Gotham_Cyrillic/GothaProBol.otf');
-    font-weight: bold;
-    font-style: normal;
-    
+  font-family: "Gotham";
+  src: url("../assets/fonts/Gotham_Cyrillic/GothaProBol.otf");
+  font-weight: bold;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'Gotham';
-    src: url('../assets/fonts/Gotham_Cyrillic/GothaProMed.otf');
-    font-weight: normal;
-    font-style: normal;
+  font-family: "Gotham";
+  src: url("../assets/fonts/Gotham_Cyrillic/GothaProMed.otf");
+  font-weight: normal;
+  font-style: normal;
 }
 
-body, html{
-	height: 100%;
-    width: 100%;
-    position: relative;
+body,
+html {
+  height: 100%;
+  width: 100%;
+  position: relative;
 }
 
 body {
-    background-image: url(../assets/img/background.jpg), linear-gradient(151deg, #ff435d, #b0208e);
-    background-repeat: no-repeat; 
-    background-size: cover;
-    background-attachment: fixed;
+  background-image: url(../assets/img/background.jpg),
+    linear-gradient(151deg, #ff435d, #b0208e);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .mercury {
-    width: 100%;
-    height: 100%;
-    max-width: 600px;
-    padding-left: 16px;
-    padding-right: 16px;
-    margin-left: auto;
-    margin-right: auto;
+  width: 100%;
+  height: 100%;
+  max-width: 600px;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .mercury__logo {
-    padding: 50px 0;
+  padding: 50px 0;
 }
 
 .logo {
-    display: block;
-    margin-left: auto;
-    margin-right: auto; 
-    max-width: 315px;
-    width: 100%;
-    text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 315px;
+  width: 100%;
+  text-align: center;
 }
 
 .logo img {
-    max-width: 315px;
-    width: 100%;
+  max-width: 315px;
+  width: 100%;
 }
 
 .login {
-    box-sizing: border-box;
-    max-width: 600px;
-    width: 100%;
-    box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.15);
-    background-color: #fff;
-    padding: 32px 40px;
-    border-radius: 8px;
-    margin: 0 0 10vh 0;
+  box-sizing: border-box;
+  max-width: 600px;
+  width: 100%;
+  box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.15);
+  background-color: #fff;
+  padding: 32px 40px;
+  border-radius: 8px;
+  margin: 0 0 10vh 0;
 }
 
 .login input {
-    color: black;
-    border: none;
-    background-color: #f1f1f1;
-    border-radius: 4px;
-    padding: 14px 16px;
-    margin-bottom: 24px;
-    width: 100%;
+  color: black;
+  border: none;
+  background-color: #f1f1f1;
+  border-radius: 4px;
+  padding: 14px 16px;
+  margin-bottom: 24px;
+  width: 100%;
 
-    opacity: 0.8;
-    font-family: Gotham;
-    font-size: 16px;
-    font-weight: 500;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    color: #262626;
+  opacity: 0.8;
+  font-family: Gotham;
+  font-size: 16px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #262626;
 }
 
 .login input:focus {
-    outline: none;
-    box-shadow: 0 0 0 1px rgba(151, 151, 151, 0.25);
+  outline: none;
+  box-shadow: 0 0 0 1px rgba(151, 151, 151, 0.25);
 }
 
 .login__form-btn {
-    margin: 16px 0;
+  margin: 16px 0;
 }
 
 .btn {
-    cursor: pointer;
-    outline: none;
-    width: 145px;
-    height: 48px;
-    border: none;
-    border-radius: 100px;
-    box-shadow: 0 4px 16px 0 rgba(237, 65, 89, 0.4);
-    background-color: #ed4159;
-    font-family: Gotham;
-    font-size: 14px;
-    font-weight: 500;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: center;
-    color: #ffffff;
+  cursor: pointer;
+  outline: none;
+  width: 145px;
+  height: 48px;
+  border: none;
+  border-radius: 100px;
+  box-shadow: 0 4px 16px 0 rgba(237, 65, 89, 0.4);
+  background-color: #ed4159;
+  font-family: Gotham;
+  font-size: 14px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff;
 }
 
 .btn:hover {
-    background-color: #ffffff;
-    color: #ed4159;
-    box-shadow: 0 6px 20px 0 rgba(237, 65, 89, 0.4);
+  background-color: #ffffff;
+  color: #ed4159;
+  box-shadow: 0 6px 20px 0 rgba(237, 65, 89, 0.4);
 }
 
 .btn:active {
-    background-color: #ffffff;
-    color: #ed4159;
-    box-shadow: 0 2px 10px 0 rgba(237, 65, 89, 0.5);
+  background-color: #ffffff;
+  color: #ed4159;
+  box-shadow: 0 2px 10px 0 rgba(237, 65, 89, 0.5);
 }
 
 .error-msg {
-    width: 100%;
-    border-radius: 4px;
-    background-color: rgba(237, 65, 89, 0.25);
-    padding: 11px 16px;
-    margin-top: 0;
-    margin-bottom: 24px;
+  width: 100%;
+  border-radius: 4px;
+  background-color: rgba(237, 65, 89, 0.25);
+  padding: 11px 16px;
+  margin-top: 0;
+  margin-bottom: 24px;
 
-    font-family: Gotham;
-    font-size: 14px;
-    font-weight: 500;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    color: #ed4159;
+  font-family: Gotham;
+  font-size: 14px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #ed4159;
 }
 
 .error-input {
-    box-shadow: 0 0 0 1px #ed4159 !important;
-    color: #ed4159 !important;
+  box-shadow: 0 0 0 1px #ed4159 !important;
+  color: #ed4159 !important;
 }
 
 .login__header {
-    margin-top: 0; 
-    margin-bottom: 32px;
-    opacity: 0.8;
-    font-family: Gotham;
-    font-size: 24px;
-    font-weight: bold;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: 0.2px;
-    text-align: center;
-    color: #262626;
+  margin-top: 0;
+  margin-bottom: 32px;
+  opacity: 0.8;
+  font-family: Gotham;
+  font-size: 24px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 0.2px;
+  text-align: center;
+  color: #262626;
 }
 
 .login__form {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .profile {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    max-width: 600px;
-    border-radius: 8px;
-    box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.15);
-    background-color: #fff;
-    padding: 32px 0;
-    margin: 0 0 10vh 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 600px;
+  border-radius: 8px;
+  box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.15);
+  background-color: #fff;
+  padding: 32px 0;
+  margin: 0 0 10vh 0;
 }
 
 .profile-img {
-    margin-bottom: 24px;
-    border-radius: 50%;
-    width: 128px;
-    height: 128px;
-    border: solid 1px #979797;
+  margin-bottom: 24px;
+  border-radius: 50%;
+  width: 128px;
+  height: 128px;
+  border: solid 1px #979797;
 }
 
 .profile-name {
-    margin-bottom: 24px;
-    opacity: 0.8;
-    font-family: Gotham;
-    font-size: 28px;
-    font-weight: bold;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: 0.2px;
-    text-align: center;
-    color: #262626;
+  margin-bottom: 24px;
+  opacity: 0.8;
+  font-family: Gotham;
+  font-size: 28px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 0.2px;
+  text-align: center;
+  color: #262626;
 }
 
 .logout-btn {
-    margin: 16px 0;
+  margin: 16px 0;
 }
