--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ body {
   width: 100%;
 }
 
-.login {
+.panel {
   box-sizing: border-box;
   max-width: 600px;
   width: 100%;
@@ -177,12 +177,6 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  max-width: 600px;
-  border-radius: 8px;
-  box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.15);
-  background-color: #fff;
-  padding: 32px 0;
-  margin: 0 0 10vh 0;
 }
 
 .profile-img {
